# sakinah-ai

./: .gitignore  README.md  create_ayah_chunks.py  create_chunks_sahi_muslim.py  embed_and_store.py  embed_and_store_docs.py  main.py  pdf_chunking.py  pyproject.toml  retrieve_from_rag.py  sahih_bukhari_chunking.py  sahih_muslim_chunking.py
src/: main.py
src/agent/: agent.py  helper_functions.py  nodes.py  routing_functions.py  schema.py
