[project]
name = "sakinah-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "langchain-pinecone>=0.2.9",
    "langgraph>=0.5.3",
    "pandas>=2.3.1",
    "pinecone>=7.3.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "sakinah-ai",
]

[tool.uv.sources]
sakinah-ai = { workspace = true }
